--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edittext_title" />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/chkx_has_been_read"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Has been read"
@@ -41,13 +41,20 @@
         app:layout_constraintTop_toBottomOf="@+id/edittext_reason_to_read" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button_save" />
+
 
 </android.support.constraint.ConstraintLayout>
