Implements the MVVM, but fails to save changes.  Most likely something needed in the onClickListener in the buildItemView method in the BookController class.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,17 +9,18 @@
     tools:showIn="@layout/activity_main">
 
     <ScrollView
+        android:id="@+id/scrollview_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+<!--        <LinearLayout
             android:id="@+id/layout_book_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+        </LinearLayout>-->
 
-        </LinearLayout>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
