restructure the intent on main activity

--- a/ReadingList/app/src/main/res/layout/activity_edit_book.xml
+++ b/ReadingList/app/src/main/res/layout/activity_edit_book.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,17 +19,17 @@
             android:text="@string/book_title" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/edBookTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/book_title"
             android:layout_weight="1"
             android:ems="10"
+            android:hint="@string/book_title"
             android:inputType="textPersonName" />
     </LinearLayout>
 
     <CheckBox
-        android:id="@+id/chckbxReadBook"
+        android:id="@+id/checkboxReadBook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/read_book" />
