--- a/ReadingList/app/src/main/res/layout/activity_main.xml
+++ b/ReadingList/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,9 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnAddBook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Add Book" />
 
 </LinearLayout>
