--- a/ReadingList/app/src/main/res/layout/activity_edit_book.xml
+++ b/ReadingList/app/src/main/res/layout/activity_edit_book.xml
@@ -28,6 +28,28 @@
             android:inputType="textPersonName" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/reason_to_read" />
+
+        <EditText
+            android:id="@+id/edReasonToRead"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:hint="@string/reason_to_read"
+            android:inputType="textPersonName" />
+    </LinearLayout>
+
     <CheckBox
         android:id="@+id/checkboxReadBook"
         android:layout_width="match_parent"
