--- a/ReadingList/app/src/main/res/layout/activity_edit_book.xml
+++ b/ReadingList/app/src/main/res/layout/activity_edit_book.xml
@@ -55,4 +55,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/read_book" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cancel" />
+
+        <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/submit" />
+    </LinearLayout>
 </LinearLayout>
