--- a/ReadingList/app/src/main/res/layout/activity_main.xml
+++ b/ReadingList/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".activities.MainActivity">
 
     <ScrollView
+        android:id="@+id/scrollView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
