--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,12 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <LinearLayout
-            android:id="@+id/layout_list"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+
 
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
@@ -31,6 +31,13 @@
             </android.support.design.widget.AppBarLayout>
 
             <include layout="@layout/content_main" />
+            <LinearLayout
+                android:id="@+id/layout_list"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </LinearLayout>
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
