--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -64,7 +64,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save"/>
+        android:text="Cancel"/>
 
 </android.support.constraint.ConstraintLayout>
 
