--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -16,7 +16,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="Book ID"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/book_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +31,6 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:inputType="textPersonName"
-        android:text="Name"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,13 +42,12 @@
 
     <EditText
         android:id="@+id/reason_to_read_view"
-        android:layout_width="wrap_content"
-        android:layout_height="212dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:inputType="text"
-        android:text="This text represents what all you liked about the book and what the reason to read it is."
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
