--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/add_book"
+        android:id="@+id/add_book_button"
         android:layout_width="355dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
