--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
     <Button
-    android:id="@+id/button"
-    android:text="enter"
+    android:id="@+id/button_add"
+    android:text="ADD"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
 
